--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,8 @@
-<h1> Utoob </h1>
-<h3>Login or Create Account</h3>
+<h1>Login</h1>
+<%= form_for(:user, :url => {:controller => 'users', :action => 'create'}) do |f| %>
+
+  <p> Email:</br> <%= f.text_field :email%> </p>
+  <p> Password:</br> <%= f.password_field :password%></p>
+  <%= f.submit :Signup %>
+<% end %>
 
