--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,5 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<h1>Welcome <%=@user.email%> </h1>
+<ul>
+<li><%= link_to 'Movie List', movies_path %></li>
+<li><%= link_to 'your comments'%></li>
+</ul>
