--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,5 +1,5 @@
 <h1>All Movies</h1>
 
 <% @movies.each do |movie| %>
-<p><%= link_to movie.title, movie_path %></p>
+<p><%= link_to movie.title, movie_comments_path(movie) %></p>
 <% end %>
