--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,5 +1,7 @@
-<iframe src = "<%= @movie.trailer %>"  height = "500" width = "900"></iframe></br>
+
+<iframe src = "<%= @movie.trailer %>" height = "500", width = "900"></iframe></br>
 <%= link_to "View/Add/Edit Comments", new_movie_comment_path(@movie)%>
+
 
 
 
