--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,6 @@
+<div class = "font">
 <h1>Welcome <%=@user.email%> </h1>
 <ul>
 <li><%= link_to 'Movie List', movies_path(@movie) %></li>
 </ul>
+</div>
